# materialverlei-kopernikus

./: .gitignore  Cargo.toml  Dockerfile  README.md  Trunk.toml  build.sh  docker-compose.yml  index.css  index.html  start.sh
api/: .env  Cargo.toml  Rocket.toml
api/src/: main.rs
api/src/components/: .db.rs.swp  db.rs  err.rs  handlers.rs  loginhandler.rs  material.rs  mod.rs  routs.rs  user.rs
api/src/db/: material.rs  mod.rs  user.rs
api/src/routing/: guards.rs  helpers.rs  mod.rs  routs.rs
api/static/: index.html  material-verlei-frontend-9253345b049024a5.js  material-verlei-frontend-9253345b049024a5_bg.wasm
frontend/: Cargo.toml  Trunk.toml  index.css  index.html
frontend/src/: main.rs
frontend/src/components/: material.rs
frontend/src/services/: auth.rs  req.rs
frontend/src/types/: material.rs  mod.rs
shared/: Cargo.toml
shared/src/types/: auth.rs  mod.rs
src/: lib.rs  main.rs
src/components/: material.rs
~/.vimdid/: %home%joel%.config%nvim%init.lua  %home%joel%.config%nvim%lua%keys.lua  %home%joel%.config%nvim%lua%opts.lua  %home%joel%dev%rust%materialverlei-kopernikus%api%Cargo.toml  %home%joel%dev%rust%materialverlei-kopernikus%api%src%components%db.rs  %home%joel%dev%rust%materialverlei-kopernikus%api%src%components%loginhandler.rs  %home%joel%dev%rust%materialverlei-kopernikus%api%src%components%material.rs  %home%joel%dev%rust%materialverlei-kopernikus%frontend%Cargo.toml  %home%joel%dev%rust%materialverlei-kopernikus%frontend%src%types%material.rs
