[package]
name = "material-verlei-api"
version = "0.1.0"
edition = "2021"
authors = ["Joel Köper <jk@joelkoeper.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.*.*"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
