[package]
name = "material-verlei-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Joel Köper <jk@joelkoeper.de>"]

[build]
target = "wasm32-unknown-unknown"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.*.*"
wasm-bindgen = "*"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
