[package]
name = "material-verlei-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Joel Köper <jk@joelkoeper.de>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
wasm-bindgen-futures = "0.4.32"
gloo-net = {version = "0.2.4", features = ["json"]}
gloo-storage = "0.2.2"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
thiserror = "1"
shared = { path = "../shared" }
chrono = "0.4"
